<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dirtside</string>
    <string name="title_infantryteam_detail">InfantryTeam Detail</string>
    <string name="val_resolvecombat">Resolve Combat</string>
    <string name="val_infantrylist">List Infantry teams</string>
    <string name="val_weapon">Weapon</string>
    <string name="val_firecontrol">Fire Control</string>
    <string name="val_moving">Moving?</string>
    <string name="val_infantry">Infantry</string>
    <string name="val_vehicle">Vehicle</string>
    <string name="val_armour">Armour</string>
    <string name="val_resolvenormal">Resolve</string>
    <string name="val_spillovermedium">Spillover fire (Medium)</string>
    <string name="val_spilloverlong">Resolve Spillover (Long)</string>
    <string name="val_targetstate">Target is</string>
    <string name="val_targetsize">Size</string>
    <string name="val_ecm">ECM</string>
    <string name="val_pds">PDS</string>
    <string name="val_ads">ADS</string>
    <string name="val_range">Range</string>

    <string-array name="valTargetState">
        <item>In the open</item>
        <item>Hull Down</item>
        <item>Turret Down</item>
        <item>Dug In</item>
        <item>Evading</item>
        <item>Popping up</item>
        <item>In soft cover</item>
    </string-array>
    <string-array name="valPDS">
        <item>None</item>
        <item>BAS</item>
        <item>ENH</item>
        <item>SUP</item>
    </string-array>
    <string-array name="valADS">
        <item>None</item>
        <item>BAS</item>
        <item>ENH</item>
        <item>SUP</item>
    </string-array>

    <string name="val_htk">Hits to Kill</string>
    <string name="msg_not_capable">Automatic Miss - Firecontrol not capable\n</string>
    <string name="msg_missiles_cant_shoot_inf">GMS\'s amd HVMS\'s cannot attack infantry\n</string>
    <string name="msg_attack_result">Attacker D%1$d rolls %2$d\n</string>
    <string name="msg_out_of_range">*** Out of Range ***\n</string>
    <string name="msg_ads_result">ADS D%1$d rolls %2$d\n</string>
    <string name="msg_pds_result">PDS D%1$d rolls %2$d\n</string>
    <string name="msg_ecm_result">ECM D%1$d rolls %2$d\n</string>
    <string name="msg_result_die">D%1$d -vs- D%2$d and D%3$d\n</string>
    <string name="msg_missed">The attack missed\n</string>
    <string name="msg_result">%1$d -vs- %2$d, %3$d\n</string>
    <string name="msg_iavr_inf">IAVR\'s can not attack infantry\n</string>
    <string name="msg_autohit">Automatic hit</string>
    <string name="msg_spillover">Targets within %1$d  mu can be hit by spillover fire\n</string>
    <string name="msg_armour">Armour: %1$s, valid chits %2$s\n</string>
    <string name="msg_total_damage">Total Damage: %1$d, %2$s\n</string>
    <string name="msg_destroyed">Target destroyed</string>
    <string name="msg_damaged">Target damaged</string>
    <string name="msg_no_effect">Target un-damaged</string>
    <string name="chit_b">Boom!</string>
    <string name="chit_fd">Firer Systems Down</string>
    <string name="chit_td">Target Systems Down</string>
    <string name="chit_mb">Mobility</string>
    <string name="val_messages">Messages</string>
    <string name="val_die_rolls">Die Rolls</string>
    <string name="val_results">Results</string>
    <string name="val_notes">Notes</string>
    <string name="val_description">Description</string>
    <string name="val_cost">Cost</string>
    <string name="val_personnel_count">Personnel Count</string>
    <string name="val_IAVR">IAVR</string>
    <string name="val_flying">Flying</string>
    <string name="val_biological">Biological</string>
    <string name="val_engineering">Engineering</string>
    <string name="val_lad">LAD</string>
    <string name="val_teleport">Teleport</string>
    <string name="val_short">Short</string>
    <string name="val_medium">Medium</string>
    <string name="val_long">Long</string>
    <string name="title_activity_campaigns">Campaigns</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="val_campaigns">Campaigns</string>
    <string name="title_activity_nationalities">Nationalities</string>
    <string name="title_nationality_list">Nationalities</string>
    <string name="title_nationality_detail">Nationality Detail</string>

</resources>