<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/butResolveCombat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_resolvecombat" />

    <Button
        android:id="@+id/butListInfantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_infantrylist" />    

    <Button
        android:id="@+id/butListCampaigns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_campaigns" />       
</LinearLayout>
