<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblWeapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val_weapon" />

        <Spinner
            android:id="@+id/spnWeapon"
            android:layout_width="236dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spnWeaponSize"
            android:layout_width="105dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblFireControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val_firecontrol" />

        <Spinner
            android:id="@+id/spnFireControl"
            android:layout_width="267dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chkMoving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_moving" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbInfantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val_infantry" />

        <RadioButton
            android:id="@+id/rbVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/val_vehicle" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblArmour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val_armour" />

        <Spinner
            android:id="@+id/spnArmourType"
            android:layout_width="428dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spnArmourSize"
            android:layout_width="175dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>