<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infantryteam_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context=".InfantryTeamDetailFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/spnCampaign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spnNationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblInfantryDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val_description" />

        <TextView
            android:id="@+id/txtInfantryDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/lblInfantryNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val_notes" />

        <TextView
            android:id="@+id/txtInfantryNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblInfantryCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/val_cost" />

            <TextView
                android:id="@+id/txtInfantryCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="" />

            <TextView
                android:id="@+id/lblInfantryPersonnelCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/val_personnel_count" />

            <TextView
                android:id="@+id/txtInfantryPersonnelCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spnInfantryMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spnInfantryFirepower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spnInfantryHTK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spnInfantryRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow>

                <CheckBox
                    android:id="@+id/chkIAVR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/val_IAVR" />

                <CheckBox
                    android:id="@+id/chkFlying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/val_flying" />
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/chkBiological"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/val_biological" />

                <CheckBox
                    android:id="@+id/chkEngineering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/val_engineering" />
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/chkLAD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/val_lad" />

                <CheckBox
                    android:id="@+id/chkTeleport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/val_teleport" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/pnlInfantryWeapons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblInfantryWeapons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/val_weapon" />

            <TextView
                android:id="@+id/txtInfantryWeapon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="" />

            <TableLayout
                android:id="@+id/pnlInfantryRanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lblInfantryRangeShort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/val_short" />

                    <TextView
                        android:id="@+id/lblInfantryRangeMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/val_medium" />

                    <TextView
                        android:id="@+id/lblInfantryRangeLong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/val_long" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtInfantryRangeShort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/txtInfantryRangeMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/txtInfantryRangeLong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>